# docs/swagger.yaml
@@ -161,7 +161,9 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Product'
+              items:
+                $ref: '#/definitions/models.Product'
+              type: array
             type: array
         "500":
           description: Ошибка сервера
